# python_crud

./: README.md  pyproject.toml
backend/: Dockerfile  crud.py  database.py  models.py  requirements.txt  router.py  schemas.py
frontend/: Dockerfile  app.py
