[project]
name = "python-crud"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.11",
    "pandas>=2.2.3",
    "psycopg2>=2.9.10",
    "pydantic-extra-types>=2.10.2",
    "pydantic[email]>=2.10.6",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "streamlit>=1.42.2",
    "uvicorn>=0.34.0",
]
